SOLR-13662: Support for putting manifest inside jar file